[tool.poetry]
name = "den"
version = "0.1.0"
description = ""
authors = ["Juan Gonzalez <jrg2156@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
den = "den.den:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
